// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core: Typography Abbreviations renders 1`] = `
Array [
  <h2
    id="abbreviations"
  >
    Abbreviations
  </h2>,
  <p>
    Stylized implementation of HTML’s
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;abbr&gt;
    </code>
     element for abbreviations and acronyms to show the expanded version on hover. Abbreviations have a default underline and gain a help cursor to provide additional context on hover and to users of assistive technologies.
  </p>,
  <p>
    Add 
    <code
      className="code-tags code-tags-secondary"
    >
      .initialism
    </code>
     to an abbreviation for a slightly smaller font-size.
  </p>,
  <div
    className="showcase-panel"
  >
    <p>
      <abbr
        title="Laugh Out Loud"
      >
        LOL
      </abbr>
    </p>
    <p>
      <abbr
        className="initialism"
        title="HyperText Markup Language"
      >
        HTML
      </abbr>
    </p>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;p&gt;&lt;abbr title="Laugh Out Loud"&gt;LOL&lt;/abbr&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;abbr title="HyperText Markup Language" class="initialism"&gt;HTML&lt;/abbr&gt;&lt;/p&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
  <p>
    <a
      href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/abbr"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read more
    </a>
     
    about abbreviations.
  </p>,
]
`;

exports[`Core: Typography AkkuratMono renders 1`] = `
Array [
  <h2
    id="akkurat-mono"
  >
    Akkurat Mono
  </h2>,
  <p>
    The Akkurat Mono font should be used when code is to be presented, for instance with code tags.
  </p>,
  <h3>
    Download
  </h3>,
  <div
    className="slab slab-elevated"
  >
    <p>
      Before downloading the Akkurat Mono font, make sure to understand the correct usages of Akkurat Mono.
    </p>
    <a
      active={null}
      aria-disabled={null}
      aria-label={null}
      aria-pressed={null}
      className="btn btn-primary"
      disabled={null}
      href="/TEST/release/fonts/AkkuratMono.zip"
      onClick={[Function]}
      role="button"
      tabIndex={null}
      title={null}
      type={null}
    >
      <i
        aria-hidden="true"
        className="material-icons"
      >
        file_download
      </i>
      <span>
        Akkurat Mono
      </span>
    </a>
  </div>,
]
`;

exports[`Core: Typography Blockquotes renders 1`] = `
Array [
  <h2
    id="blockquotes"
  >
    Blockquotes
  </h2>,
  <p>
    For quoting blocks of content from another source within your document. Wrap 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;blockquote&gt;
    </code>
     or
     
    <code
      className="code-tags code-tags-secondary"
    >
      .blockquote
    </code>
     around any HTML as the quote.
  </p>,
  <div
    className="showcase-panel"
  >
    <blockquote
      className="blockquote"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
      </p>
    </blockquote>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;blockquote class="blockquote"&gt;
                

                    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
                

                &lt;/blockquote&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography Blockquotes renders 2`] = `
Array [
  <h3>
    Naming a source
  </h3>,
  <p>
    Add a 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;footer&gt;
    </code>
     for identifying the source. Wrap the name of the source work in
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;cite&gt;
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <blockquote
      className="blockquote"
    >
      <p>
        Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?
      </p>
      <footer>
        <cite
          title="The Karate Kid (1984)"
        >
          Mr. Miyagi
        </cite>
      </footer>
    </blockquote>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;blockquote class="blockquote"&gt;
                

                    &lt;p&gt;Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?&lt;/p&gt;
                

                    &lt;footer&gt;&lt;cite title="The Karate Kid (1984)"&gt;Mr. Miyagi&lt;/cite&gt;&lt;/footer&gt;
                

                &lt;/blockquote&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography Blockquotes renders 3`] = `
Array [
  <h2
    id="blockquotes"
  >
    Blockquotes
  </h2>,
  <p>
    For quoting blocks of content from another source within your document. Wrap 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;blockquote&gt;
    </code>
     or
     
    <code
      className="code-tags code-tags-secondary"
    >
      .blockquote
    </code>
     around any HTML as the quote.
  </p>,
  <div
    className="showcase-panel"
  >
    <blockquote
      className="blockquote"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
      </p>
    </blockquote>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;blockquote class="blockquote"&gt;
                

                    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
                

                &lt;/blockquote&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
  <h3>
    Naming a source
  </h3>,
  <p>
    Add a 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;footer&gt;
    </code>
     for identifying the source. Wrap the name of the source work in
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;cite&gt;
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <blockquote
      className="blockquote"
    >
      <p>
        Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?
      </p>
      <footer>
        <cite
          title="The Karate Kid (1984)"
        >
          Mr. Miyagi
        </cite>
      </footer>
    </blockquote>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;blockquote class="blockquote"&gt;
                

                    &lt;p&gt;Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?&lt;/p&gt;
                

                    &lt;footer&gt;&lt;cite title="The Karate Kid (1984)"&gt;Mr. Miyagi&lt;/cite&gt;&lt;/footer&gt;
                

                &lt;/blockquote&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography Headings renders 1`] = `
Array [
  <h2
    id="headings"
  >
    Headings
  </h2>,
  <p>
    TESTBRAND
     Design Guide provides basic styling on all headings (h1-h6).
  </p>,
  <div
    className="showcase-panel"
  >
    <h1>
      Heading h1
    </h1>
    <h2>
      Heading h2
    </h2>
    <h3>
      Heading h3
    </h3>
    <h4>
      Heading h4
    </h4>
    <h5>
      Heading h5
    </h5>
    <h6>
      Heading h6
    </h6>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;h1&gt;Heading h1&lt;/h1&gt;
                

                &lt;h2&gt;Heading h2&lt;/h2&gt;
                

                &lt;h3&gt;Heading h3&lt;/h3&gt;
                

                &lt;h4&gt;Heading h4&lt;/h4&gt;
                

                &lt;h5&gt;Heading h5&lt;/h5&gt;
                

                &lt;h6&gt;Heading h6&lt;/h6&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
  <p>
    The classes 
    <code
      className="code-tags code-tags-secondary"
    >
      .h1
    </code>
     through
     
    <code
      className="code-tags code-tags-secondary"
    >
      .h6
    </code>
     are also available, for when you want to match the font styling of a heading but cannot use the associated HTML element.
  </p>,
  <div
    className="showcase-panel"
  >
    <p
      className="h1"
    >
      .h1 heading
    </p>
    <p
      className="h2"
    >
      .h2 heading
    </p>
    <p
      className="h3"
    >
      .h3 heading
    </p>
    <p
      className="h4"
    >
      .h4 heading
    </p>
    <p
      className="h5"
    >
      .h5 heading
    </p>
    <p
      className="h6"
    >
      .h6 heading
    </p>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;p class="h1"&gt;.h1 heading&lt;/p&gt;
                

                &lt;p class="h2"&gt;.h2 heading&lt;/p&gt;
                

                &lt;p class="h3"&gt;.h3 heading&lt;/p&gt;
                

                &lt;p class="h4"&gt;.h4 heading&lt;/p&gt;
                

                &lt;p class="h5"&gt;.h5 heading&lt;/p&gt;
                

                &lt;p class="h6"&gt;.h6 heading&lt;/p&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography HeroTitle renders 1`] = `
Array [
  <h2
    id="hero-title"
  >
    Hero title
  </h2>,
  <p>
    The class 
    <code
      className="code-tags code-tags-secondary"
    >
      .hero
    </code>
     can be used to achieve the big and bold hero title styling.
  </p>,
  <div
    className="showcase-panel"
  >
    <h1
      className="hero"
    >
      Hero title
    </h1>
    <p
      className="hero"
    >
      Hero title
    </p>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;h1 class="hero"&gt;Hero title&lt;/h1&gt;
                

                &lt;p class="hero"&gt;Hero title&lt;/p&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography Inline renders 1`] = `
Array [
  <h2
    id="inline-text-elements"
  >
    Inline text elements
  </h2>,
  <p>
    Styling for common inline HTML5 elements.
  </p>,
  <div
    className="showcase-panel"
  >
    <p>
      You can use the mark tag to 
      <mark>
        highlight
      </mark>
       text.
    </p>
    <p>
      <del>
        This line of text is meant to be treated as deleted text.
      </del>
    </p>
    <p>
      <s>
        This line of text is meant to be treated as no longer accurate.
      </s>
    </p>
    <p>
      <ins>
        This line of text is meant to be treated as an addition to the document.
      </ins>
    </p>
    <p>
      <u>
        This line of text will render as underlined
      </u>
    </p>
    <p>
      <small>
        This line of text is meant to be treated as fine print.
      </small>
    </p>
    <p>
      <strong>
        This line rendered as bold text.
      </strong>
    </p>
    <p>
      <b>
        This line really stands out.
      </b>
    </p>
    <p>
      <em>
        This line rendered as italicized text.
      </em>
    </p>
    <p>
      <i>
        This is the last line, it too will render as italicized text.
      </i>
    </p>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

                8
                

                9
                

                10
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;p&gt;You can use the mark tag to &lt;mark&gt;highlight&lt;/mark&gt; text.&lt;/p&gt;
                

                &lt;p&gt;&lt;del&gt;This line of text is meant to be treated as deleted text.&lt;/del&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;s&gt;This line of text is meant to be treated as no longer accurate.&lt;/s&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;ins&gt;This line of text is meant to be treated as an addition to the document.&lt;/ins&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;u&gt;This line of text will render as underlined&lt;/u&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;small&gt;This line of text is meant to be treated as fine print.&lt;/small&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;strong&gt;This line rendered as bold text.&lt;/strong&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;b&gt;This line really stands out.&lt;/b&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;em&gt;This line rendered as italicized text.&lt;/em&gt;&lt;/p&gt;
                

                &lt;p&gt;&lt;i&gt;This is the last line, it too will render as italicized text.&lt;/i&gt;&lt;/p&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
  <p>
    The 
    <code
      className="code-tags code-tags-secondary"
    >
      .mark
    </code>
     and
     
    <code
      className="code-tags code-tags-secondary"
    >
      .small
    </code>
     classes are also available to apply the same styles as 
    <code
      className="code-tags code-tags-primary"
    >
      &lt;mark&gt;
    </code>
     and
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;small&gt;
    </code>
     while avoiding any unwanted semantic implications that the tags would bring.
  </p>,
  <p>
    While not shown above, feel free to use
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;b&gt;
    </code>
     and
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;i&gt;
    </code>
     in HTML5.
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;b&gt;
    </code>
     is meant to highlight words or phrases without conveying additional importance while
     
    <code
      className="code-tags code-tags-primary"
    >
      &lt;i&gt;
    </code>
     is mostly for voice, technical terms, etc.
  </p>,
]
`;

exports[`Core: Typography Lead renders 1`] = `
Array [
  <h2
    id="lead"
  >
    Lead
  </h2>,
  <p>
    Make a paragraph stand out by using
     
    <code
      className="code-tags code-tags-secondary"
    >
      .lead
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <p
      className="lead"
    >
      This is a leading paragraph which for instance can be used as an introduction.
    </p>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            className="material-icons-outlined"
          >
            content_copy
          </i>
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;p class="lead"&gt;This is a leading paragraph which for instance can be used as an introduction.&lt;/p&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Core: Typography Typefaces renders 1`] = `
<section
  className="typography-typefaces"
>
  <h2
    id="typefaces"
  >
    Typefaces
  </h2>
  <div
    className="illustration mb-3"
  >
    <div
      className="swedbank-headline"
    >
      Ag
      <span>
        Swedbank Headline
      </span>
    </div>
    <div
      className="arial"
    >
      Ag
      <span>
        Arial
      </span>
    </div>
    <div
      className="akkurat-mono"
    >
      Ag
      <span>
        Akkurat Mono
      </span>
    </div>
  </div>
  <a
    className="icon-link"
    href="/TEST/release/fonts/Fonts.zip"
  >
    <i
      aria-hidden="true"
      className="material-icons"
    >
      download
    </i>
    <span
      className="ml-2"
    >
      Download all Swedbank Pay typefaces
    </span>
  </a>
  <h3>
    Area of usages
  </h3>
  <ul
    className="list list-bullet"
  >
    <li>
      <span
        className="swedbank-headline"
      >
        Swedbank Headline
      </span>
       – used for headlines and lead texts
    </li>
    <li>
      <span
        className="arial font-weight-bold"
      >
        Arial
      </span>
       – used for sub headlines and body texts
    </li>
    <li>
      <span
        className="akkurat-mono"
      >
        Akkurat Mono
      </span>
       – used for code examples and snippets
    </li>
  </ul>
  <h3>
    Be respectful of content hierarchy
  </h3>
  <p>
    In order for us to create good and accessible structure in our products, it’s mandatory to include heading levels. No more than one h1 should be present on the page and if you have used h2 and want to show hierarchy in content, h3 should be used next and so on.
  </p>
</section>
`;
